# giskard-vision

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-python.yml  create-release.yml  do-release.yml  lock-deps.yml
docs/: index.md
docs/getting_started/: index.md
docs/getting_started/quickstart/: index.md
docs/open_source/: index.md
docs/open_source/installation_library/: index.md
docs/open_source/scan/: index.md
docs/tutorials/: index.md
docs/tutorials/ldm_tutorials/: index.md
examples/: SixDRepNet_benchmark.ipynb  criteria1_partial_faces.ipynb  criteria2_classical_transformations.ipynb  criteria3_face_orientations.ipynb  criteria4_ethnicity.ipynb  dataloader_test.ipynb  ex1_draw_landmarks.ipynb  ex2_draw_partial_landmarks.ipynb  ex3_calculate_euc_dists.ipynb  ex4_slice.ipynb  ex4_tests_and_metrics.ipynb  ex5_models_comparison.ipynb  ex6_cropping.ipynb  ex7_facial_parts.ipynb  ex_8_NERF_metric.ipynb  example1.ipynb  ffhq-filtering.ipynb  ffhq.ipynb  master.ipynb  test.ipynb
examples/300W/sample/: indoor_004.pts
examples/ffhq/: 00002.json  00007.json  00010.json  ffhq-dataset-meta.json
examples/image_classification/: datasets.ipynb  sc_models.ipynb  sc_scan.ipynb  single_classification_models.ipynb
examples/landmark_detection/: SixDRepNet_benchmark.ipynb  criteria1_partial_faces.ipynb  criteria2_classical_transformations.ipynb  criteria3_face_orientations.ipynb  criteria4_ethnicity.ipynb  ex1_draw_landmarks.ipynb  ex2_draw_partial_landmarks.ipynb  ex3_calculate_euc_dists.ipynb  ex4_tests_and_metrics.ipynb  ex6_cropping.ipynb  ex7_facial_parts.ipynb  ex_8_NERF_metric.ipynb  example_scan.ipynb  example_scan.py  example_vision.html  example_vision_opencv_300w_all.html  ffhq.ipynb  ffhq_scan.ipynb  master.ipynb  report.ipynb  skin_cancer_image_classification.ipynb  skin_cancer_scan.ipynb
examples/landmark_detection/benchmarks/: SixDRepNet_benchmark.ipynb
examples/landmark_detection/criterias/: criteria1_partial_faces.ipynb  criteria2_classical_transformations.ipynb  criteria3_face_orientations.ipynb  criteria4_ethnicity.ipynb
examples/landmark_detection/demo/: ethnicity_criteria.ipynb  full_report.csv  metrics_example.ipynb  partial_faces_criteria.ipynb  report_example.ipynb
examples/landmark_detection/features/: ex1_draw_landmarks.ipynb  ex2_draw_partial_landmarks.ipynb  ex4_tests_and_metrics.ipynb  ex6_cropping.ipynb  ex7_facial_parts.ipynb  ex_8_NERF_metric.ipynb
examples/landmark_detection/ffhq/: 00000.json  00008.json  ffhq-filtering-caching.ipynb  ffhq-filtering.ipynb  ffhq.ipynb
examples/landmark_detection/report/: master.ipynb  report.ipynb
examples/object_detection/: ffhq_scan.ipynb  furniture_scan.ipynb  living_room_passes.ipynb  living_room_passes_scan.html  racoons.ipynb  racoons_scan.ipynb  test.ipynb  test_adapted.ipynb  test_face_detection.ipynb  wheat.ipynb
examples/object_detection/racoon_detection/: train_labels_.csv
giskard_vision/: __init__.py
giskard_vision/core/: issues.py  logger.py  types.py
giskard_vision/core/dataloaders/: base.py  hf.py  meta.py  tf.py  tfds.py  utils.py  wrappers.py
giskard_vision/core/detectors/: base.py  blur_detector.py  color_detector.py  example_manager.py  metadata_detector.py  metadata_scan_detector.py  metrics.py  noise_detector.py  perturbation.py  specs.py  transformation_blurring_detector.py  transformation_color_detector.py  transformation_noise_detector.py
giskard_vision/core/models/: base.py  hf_pipeline.py
giskard_vision/core/scanner/: __init__.py  scanner.py
giskard_vision/core/tests/: base.py
giskard_vision/core/transformations/: resize.py
giskard_vision/detectors/: __init__.py  base.py  decorator.py  ethnicity_bias_detector.py  example_manager.py  facial_parts_detector.py  head_pose_detector.py  transformation_detector.py
giskard_vision/image_classification/: Readme.md  types.py
giskard_vision/image_classification/dataloaders/: loaders.py
giskard_vision/image_classification/detectors/: __init__.py  metadata_detector.py  specs.py
giskard_vision/image_classification/models/: base.py  wrappers.py
giskard_vision/image_classification/tests/: performance.py
giskard_vision/landmark_detection/: Readme.md  types.py
giskard_vision/landmark_detection/dataloaders/: base.py  loaders.py  wrappers.py
giskard_vision/landmark_detection/demo/: __init__.py  demo.py
giskard_vision/landmark_detection/detectors/: __init__.py  base.py  crop_detector.py  cropping_detector.py  decorator.py  ethnicity_bias_detector.py  head_pose_detector.py  metadata.py  metadata_detector.py  resize_detector.py  specs.py  surrogate_functions.py  transformation_blurring_detector.py  transformation_color_detector.py  transformation_resize_detector.py
giskard_vision/landmark_detection/marks/: facial_parts.py  utils.py
giskard_vision/landmark_detection/models/: base.py  wrappers.py
giskard_vision/landmark_detection/tests/: base.py  performance.py  report.py
giskard_vision/models/: wrappers.py
giskard_vision/object_detection/: Readme.md  types.py
giskard_vision/scanner/: __init__.py  scanner.py  scanner_vision.py
giskard_vision/tests/: performance.py
giskard_vision/utils/: errors.py
loreal_poc/: logger.py
loreal_poc/dataloaders/: base.py  loaders.py  wrappers.py
loreal_poc/datasets/: base.py  dataloader.py  dataset_300W.py
loreal_poc/marks/: facial_parts.py
loreal_poc/models/: base.py  face_alignment.py  wrapper.py  wrappers.py
loreal_poc/slicing_functions/: slicing_functions.py
loreal_poc/tests/: base.py  performance.py
loreal_poc/transformation_functions/: __init__.py  crop.py  resize.py  transformation_functions.py
loreal_poc/utils/: errors.py
loreal_poc/visualisation/: draw.py
tests/: conftest.py  test_benchmark_nmes.py  test_metrics.py
tests/core/dataloaders/: test_base.py  (+3 more)
tests/dataloaders/: test_base.py  test_wrappers.py
tests/fixtures/: fixtures.py
tests/landmark_detection/: utils.py
tests/marks/: test_facial_parts.py
tests/tests_and_metrics/: test_benchmark_nmes.py  test_metrics.py
(+36 files in other folders)
